fix: fixed issues with media track duration display clipping when handling duration with 3 components

--- a/src/components/media-player-ribbon/media-player-ribbon.component.css
+++ b/src/components/media-player-ribbon/media-player-ribbon.component.css
@@ -118,12 +118,12 @@
 
 .media-player-progress-bar-container {
   margin: 0 10px;
-  width: 70%;
+  width: 60%;
 }
 
 .media-player-progress-counter {
   color: var(--dark-text-color);
-  width: 15%;
+  width: 20%;
   font-size: 10px;
   white-space: nowrap;
   overflow: hidden;
